--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <packaging>jar</packaging>
 
   <name>hawkeye</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -69,4 +68,25 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
+  <build>
+
+    <finalName>log-collector-core</finalName>
+
+    <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+
 </project>
