--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
 
-    <lucene.version>7.2.1</lucene.version>
-    <lucene.hanlp.version>portable-1.5.3</lucene.hanlp.version>
+    <lucene.version>7.3.1</lucene.version>
+    <hanlp-lucene-plugin.version>1.1.3</hanlp-lucene-plugin.version>
 
     <junit.version>4.12</junit.version>
   </properties>
@@ -55,9 +55,9 @@
 
     <!--lucene hanlp中文分词-->
     <dependency>
-      <groupId>com.hankcs</groupId>
-      <artifactId>hanlp</artifactId>
-      <version>${lucene.hanlp.version}</version>
+      <groupId>com.hankcs.nlp</groupId>
+      <artifactId>hanlp-lucene-plugin</artifactId>
+      <version>${hanlp-lucene-plugin.version}</version>
     </dependency>
     <!--lucene 依赖 END-->
 
